--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -1559,12 +1559,12 @@ pre code {
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 960px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 960px;
   }
 }
 .container-fluid {
@@ -6629,12 +6629,12 @@ body #admin-menu .dropdown li {
 }
 @media screen and (min-width: 992px) {
   .navbar.container {
-    max-width: 940px;
+    max-width: 930px;
   }
 }
 @media screen and (min-width: 1200px) {
   .navbar.container {
-    max-width: 1140px;
+    max-width: 930px;
   }
 }
 .navbar.container,
@@ -9094,7 +9094,7 @@ form#user-login {
   text-decoration: none;
 }
 #block-locale-language ul.language-switcher-locale-url > li span.locale-untranslated {
-  color: #555555;
+  color: #777777;
 }
 /*
  *  Node page component
@@ -9631,16 +9631,21 @@ body.navbar-is-fixed-top.admin-menu {
   padding-top: 110px !important;
 }
 header#navbar {
-  border-bottom: none;
+  position: relative;
+  border: none;
   background: transparent none;
 }
-header#navbar .container {
-  padding: 30px 15px 10px;
+header#navbar a.logo {
+  margin: 10px 20px;
+  padding: 0;
 }
-header#navbar .container .navbar-header a.logo img {
-  display: none;
-  max-height: 50px;
+header#navbar a.logo img {
+  display: inline-block;
+  max-height: 60px;
   width: auto;
+}
+header#navbar .container {
+  padding: 50px 15px 0;
 }
 header#navbar .container .navbar-header a.navbar-brand {
   padding: 0;
@@ -9652,21 +9657,75 @@ header#navbar .container .navbar-header a.navbar-brand {
 header#navbar .container .navbar-header .navbar-toggle {
   padding: 5px 10px;
 }
-header#navbar .container .navbar-collapse nav ul.navbar-nav {
-  margin: 0;
+header#navbar .container .navbar-collapse nav ul.menu {
+  display: inline-block;
+  margin: 0 0 -6px;
+  float: right;
+  z-index: 10;
 }
-header#navbar .container .navbar-collapse nav ul.navbar-nav li {
-  height: 40px;
-}
-header#navbar .container .navbar-collapse nav ul.navbar-nav li a {
-  padding: 7px 15px;
-  font-family: 'SohoGothicProRegular', serif;
-  font-size: 16px;
+header#navbar .container .navbar-collapse nav ul.menu li a {
+  padding: 7px 40px 7px 10px;
+  font-family: 'SohoGothicProLight', serif;
+  font-size: 18px;
+  color: #333333;
   line-height: 1;
+}
+header#navbar .container .navbar-collapse nav ul.menu li.menu-kv {
+  border-bottom: 6px solid #95ba40;
+}
+header#navbar .container .navbar-collapse nav ul.menu li.menu-kv a:hover,
+header#navbar .container .navbar-collapse nav ul.menu li.menu-kv a.active {
+  color: #fff;
+  background-color: #95ba40;
+}
+header#navbar .container .navbar-collapse nav ul.menu li.menu-hs {
+  border-bottom: 6px solid #e87431;
+}
+header#navbar .container .navbar-collapse nav ul.menu li.menu-hs a:hover,
+header#navbar .container .navbar-collapse nav ul.menu li.menu-hs a.active {
+  color: #fff;
+  background-color: #e87431;
+}
+header#navbar .container .navbar-collapse nav ul.menu li.menu-ks {
+  border-bottom: 6px solid #78729f;
+}
+header#navbar .container .navbar-collapse nav ul.menu li.menu-ks a:hover,
+header#navbar .container .navbar-collapse nav ul.menu li.menu-ks a.active {
+  color: #fff;
+  background-color: #78729f;
+}
+header#navbar .container .navbar-collapse nav ul.menu li.menu-ex {
+  border-bottom: 6px solid #b1a895;
+}
+header#navbar .container .navbar-collapse nav ul.menu li.menu-ex a:hover,
+header#navbar .container .navbar-collapse nav ul.menu li.menu-ex a.active {
+  color: #fff;
+  background-color: #b1a895;
+}
+header#navbar .container .navbar-collapse nav ul.menu.secondary {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+header#navbar .container .navbar-collapse nav ul.menu.secondary li a {
+  padding: 0 10px 2px;
+  font-family: 'SohoGothicProRegular', serif;
+  font-size: 14px;
+  line-height: 1;
+  color: #555555;
+  border-right: 1px solid #555555;
+}
+header#navbar .container .navbar-collapse nav ul.menu.secondary li.last a {
+  border: none;
 }
 /*
  *  Content section (main content)
  * --------------------------------------------------*/
+.outer-container {
+  margin: 0 auto;
+  max-width: 1280px;
+  background-color: #fff;
+}
 .container {
   background-color: #fff;
 }
@@ -9685,6 +9744,7 @@ body {
   position: relative;
   height: 100%;
   min-height: 320px;
+  background: #ededed none;
 }
 body .main-container .container #page-header .region-header h2.block-title {
   margin: 20px 0 10px;
@@ -9692,6 +9752,7 @@ body .main-container .container #page-header .region-header h2.block-title {
   font-size: 24px;
 }
 body .main-container .container .row section h1.page-header {
+  display: none;
   margin: 20px 0 10px;
   font-family: 'SohoGothicProBold', serif;
   font-size: 41px;
@@ -9748,6 +9809,6 @@ body .main-container .fading.fading-bottom {
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#ffffffff', GradientType=0);
 }
-/* --------------------------------------------------
- * Pixelgarage Footer
+/*
+ *  Footer section
  * --------------------------------------------------*/
