--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -14,10 +14,17 @@
 
 // Main settings
 // -------------------------
+.outer-container {
+  margin: 0 auto;
+  max-width: 1280px;
+  background-color: #fff;
+}
+
 .container {
   // all container with background
   background-color: #fff;
 
+  // disable outline for links
   a {
     outline: none;
 
@@ -36,6 +43,7 @@ body {
   position: relative;
   height: 100%;
   min-height: 320px;
+  background: #ededed none;
 
   .main-container {
     .container {
@@ -59,6 +67,7 @@ body {
         section { // column(s)
 
           h1.page-header {
+            display: none;
             margin: 20px 0 10px;
             font-family: @pxl-text-font-bold;
             font-size: @font-size-h1;
@@ -124,8 +133,5 @@ body {
       }
     }
   } // main-container
-
-  footer {
-  }
 
 }
