--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -14,6 +14,10 @@
 @pxl-color-hso-ks: rgb(120, 114, 159);
 @pxl-color-hso-ex: rgb(177, 168, 149);
 
+@pxl-color-footer: #999;
+@pxl-color-footer-border: #666;
+@pxl-color-footer-bg: #39393E;
+
 //== Scaffolding
 //
 @pxl-box-shadow: 0 0 4px rgba(100,100,100, 0.4);
@@ -24,8 +28,8 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 @text-color:            @gray-dark;
-@text-color-light:      @gray;
-@text-color-disabled:   @gray-light;
+@text-color-light:      @gray-light;
+@text-color-disabled:   @gray-lighter;
 
 @font-size-base:          16px;
 @font-size-large:         ceil((@font-size-base * 1.25));
