--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -21,9 +21,6 @@
 }
 
 .container {
-  // all container with background
-  background-color: #fff;
-
   // disable outline for links
   a {
     outline: none;
@@ -43,7 +40,7 @@ body {
   position: relative;
   height: 100%;
   min-height: 320px;
-  background: #ededed none;
+  background: @pxl-color-hso-sec none;
 
   .main-container {
     .container {
