--- a/all/themes/pixelgarage/less/footer.less
+++ b/all/themes/pixelgarage/less/footer.less
@@ -8,8 +8,217 @@
 
 // Mixins
 // -------------------------
+//
+// Newsletter form
+// ---------------
+.inline-webform() {
+  .webform-component {
+    display: block;
+    margin: 0 auto 20px;
+    padding: 0;
+    width: 80%;
+    background-color: rgba(0,0,0,0);
+
+    .control-label {
+      display: none;
+    }
+
+    input.form-text {
+      padding: 10px;
+      height: auto;
+      font-family: @pxl-text-font-light;
+      font-size: 16px;
+      line-height: 1;
+      text-align: left;
+      color: @pxl-color-footer;
+      box-shadow: none;
+      #pxl-mixins.border-radius(4px);
+      border: none;
+      background-color: @webform-bg-color-input;
+    }
+    input:focus {
+      .box-shadow(inset 0 0 0.3em @webform-color-shadow);
+    }
+  }
+
+  div.form-actions {
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+
+    button.webform-submit {
+      display: inline-block;
+      margin: 0;
+      padding: 10px 20px;
+      font-family: @pxl-text-font;
+      font-size: 16px;
+      line-height: 1;
+      letter-spacing: 1.5px;
+      text-transform: capitalize;
+      color: #eee;
+      outline: none;
+      #pxl-mixins.border-radius(4px);
+      border: none;
+      background-color: @pxl-color-footer;
+
+      &:hover, &:focus {
+        color: @pxl-color-footer;
+        border: none;
+        background: #eee;
+      }
+    }
+  }
+
+  @media @narrow {
+    .webform-component {
+      display: inline-block;
+      vertical-align: top;
+      margin: 0 -3px;
+      width: 60%;
+
+      input.form-text {
+        .border-right-radius(0);
+      }
+    }
+
+    div.form-actions {
+      display: inline-block;
+      vertical-align: top;
+      margin: 0 -3px;
+      width: 40%;
+      text-align: left;
+
+      button.webform-submit {
+        .border-left-radius(0);
+      }
+    }
+  }
+}
+
 
 
 
 // Main settings
 // -------------------------
+.footer {
+  margin: 0;
+  padding: 20px 0 0;
+  border: none;
+  background-color: @pxl-color-footer-bg;
+
+  .container {
+    .region-footer {
+      .block-nodeblock {
+        // footer node block
+        .node-footer.view-mode-full {
+          .row {
+            .col-sm-6 {
+              .field {
+                .block-title {
+                  margin: 10px 0 30px;
+                  font-family: @pxl-text-font-medium;
+                  font-size: 20px;
+                  line-height: 1;
+                  color: #fff;
+                }
+              }
+
+              .field-name-newsletter {
+                form#webform-client-form-1301 {
+                  .inline-webform;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .block-menu-block {
+        // footer menu (level 1)
+        display: block;
+        margin-top: 30px;
+        padding: 30px 0;
+        width: 100%;
+        border-top: 1px solid @pxl-color-footer;
+
+        .menu-name-menu-footer-menu {
+          ul.menu {
+            text-align: center;
+            li {
+              display: inline-block;
+
+              a {
+                padding: 0 10px 2px;
+                font-family: @pxl-text-font;
+                font-size: 16px;
+                line-height: 1;
+                color: @pxl-color-footer;
+                border-right: 1px solid @pxl-color-footer-border;
+
+                &:hover,
+                &.active {
+                  text-decoration: underline;
+                  background: none;
+                }
+              }
+
+              &.last {
+                a {
+                  border: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.subfooter {
+  .container {
+    .region-subfooter {
+      .block-nodeblock {
+        // subfooter node block
+        .node-footer.view-mode-subfooter {
+          .row {
+            .col-sm-6 {
+              .field-name-copyright {
+                // copyright node block
+                .field-name-body {
+                  .field-item {
+                  }
+                }
+              }
+
+              .field-name-certificates {
+                display: block;
+                text-align: left;
+
+                @media @tablet {
+                  text-align: right;
+                }
+
+                // node block
+                .field-name-body {
+                  .field-item {
+                    a {
+                      display: inline-block;
+
+                      img {
+                        max-height: 60px;
+                        width: auto;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+}
