--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -12,7 +12,7 @@
 @webform-color-border: @gray-light;
 @webform-color-border-active: @brand-primary;
 @webform-bg-color-input: #eee;
-@webform-color-shadow: @gray-lighter;
+@webform-color-shadow: @text-color;
 
 @webform-color-submit: @text-color;
 @webform-bg-color-submit: @gray-lighter;
@@ -43,20 +43,20 @@
   display: inline-block;
   margin: 0;
   padding: 0.3em 1em;
-  font-family: @pxl-text-font-bold;
+  font-family: @pxl-text-font;
   font-size: 18px;
   line-height: 1;
   letter-spacing: 1.5px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   color: @color;
   outline: none;
   #pxl-mixins.border-radius(@radius);
-  border: 2px solid @color;
+  border: none;
   background-color: @bg-color;
 
   &:hover, &:focus {
     color: @bg-color;
-    border: 2px solid @bg-color;
+    border: none;
     background: @color;
   }
 }
@@ -415,3 +415,4 @@ form.webform-client-form {
     }
   }
 }
+
