- header, footer styling finished

--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -43,6 +43,11 @@ body {
   background: @pxl-color-hso-sec none;
 
   .main-container {
+    .region-navigation {
+      // contains banners
+      margin-bottom: 20px;
+    }
+
     .container {
       //
       // Page header
