--- a/all/themes/pixelgarage/less/pxlComponents/block-socials.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-socials.less
@@ -107,6 +107,12 @@
 // Follow site block settings
 // --------------------------
 .follow-links {
+  text-align: center;
+
+  @media @tablet {
+    text-align: left;
+  }
+
   .follow-link-wrapper {
     display: inline-block;
     margin: 0 10px 0 0;
