--- a/all/themes/pixelgarage/less/pxlComponents/form-login.less
+++ b/all/themes/pixelgarage/less/pxlComponents/form-login.less
@@ -8,13 +8,13 @@
 //text
 @pxl-login-btn-color: #fff;
 @pxl-login-btn-hover-color: #fff;
-@pxl-login-link-color: #2698f2;
-@pxl-login-link-hover-color: @pxl-login-link-color;
+@pxl-login-link-color: @pxl-color-hso-main;
+@pxl-login-link-hover-color: @pxl-color-hso-main;
 //gradients
-@pxl-login-gradient-top: #2698f2;
-@pxl-login-gradient-bottom: darken(@pxl-login-gradient-top, 20%);
-@pxl-login-gradient-2-top: #a70014;
-@pxl-login-gradient-2-bottom: darken(@pxl-login-gradient-2-top, 20%);
+@pxl-login-gradient-top: @pxl-color-hso-main;
+@pxl-login-gradient-bottom: darken(@pxl-color-hso-main, 10%);
+@pxl-login-gradient-2-top: @pxl-color-hso-main;
+@pxl-login-gradient-2-bottom: darken(@pxl-color-hso-main, 10%);
 
 
 // Mixins
