--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -20,6 +20,15 @@
 
 //== Scaffolding
 //
+//** Global text color on `<body>`.
+@text-color:            @gray-darker;
+//** Global textual link color.
+@link-color:            darken(@pxl-color-hso-main, 15%);
+//** Link hover color set via `darken()` function.
+@link-hover-color:      @pxl-color-hso-main;
+//** Link hover decoration.
+@link-hover-decoration: underline;
+
 @pxl-box-shadow: 0 0 4px rgba(100,100,100, 0.4);
 
 
@@ -57,6 +66,18 @@
 
 //== Media queries breakpoints
 //
+//## Define the breakpoints at which your layout will change, adapting to different screen sizes.
+
+// Extra small screen / phone
+//** Deprecated `@screen-xs-min` as of v3.2.0
+@screen-xs-min:              480px;
+// Small screen / tablet
+@screen-sm-min:              768px;
+// Medium screen / desktop
+@screen-md-min:              990px;
+// Large screen / wide desktop
+@screen-lg-min:              1200px;
+
 // Media queries maximums
 @screen-xs-max:              (@screen-sm-min - 1);
 @screen-sm-max:              (@screen-md-min - 1);
@@ -106,6 +127,6 @@
 
 //== Components
 //
-//## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
+//## Define common padding and border radius sizes and more.
 
 
